--- a/main.css
+++ b/main.css
@@ -1,6 +1,9 @@
-body{
-    /*background-color:*/
-}
+/*body{*/
+/*    background-image: url("IMG_1998.JPG");*/
+/*    background-size: cover;*/
+/*    filter: blur(0px);*/
+/*    background-attachment: fixed;*/
+/*}*/
 
 h1{
     font-family: Lantinghei SC;
@@ -13,19 +16,43 @@ h1{
 
 }
 
-
-
-h2{
-    font-family:Source Han Sans CN;
-    font-size: 16pt;
-    font-weight: bold;
-    line-height: 19.2;
-    color: #0070B5;
+.bg{
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    left: 0px;
+    top:0px;
+    background: url("IMG_1998.JPG") no-repeat;
+    background-size: cover;
+    -webkit-filter: blur(20px);
+    -moz-filter: blur(20px);
+    -o-filter: blur(20px);
+    -ms-filter: blur(20px);
+    filter: blur(20px);
+    opacity: 0.8;
 }
+
+.header{
+    background-color: rgba(255, 255, 255, 0.8);
+    height: 80px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    position: relative;
+    z-index: 1;
+}
+
+/*h2{*/
+/*    font-family:Source Han Sans CN;*/
+/*    font-size: 16pt;*/
+/*    font-weight: bold;*/
+/*    line-height: 19.2;*/
+/*    color: #0070B5;*/
+/*}*/
 
 p{
     font-family: Source Han Sans CN;
-    font-size: 9pt;
+    font-size: 15pt;
     font-weight: normal; /* regular */
     line-height: 12;
 }
@@ -47,16 +74,22 @@ p{
     color: black;
 }
 .nav{
-    background-color: #1D2088;
-    font-family: Source Han Sans CN;
-    overflow: hidden;
-    font-size:30pt;
-    float: contour;
+    background-color: #0070B5;
+    height: 50px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding:0 0px;
+    /*position: fixed;*/
+    top: 0;
+    left: 0;
+    right: 0;
+    z-index: 1;
 }
 .nav a{
-    color: white;
+    color: black;
     text-align: center;
-    padding: 14px 16px;
+    padding: 6px 10px;
     text-decoration: none;
     font-weight: bold;
     font-size: 20pt;
@@ -67,12 +100,12 @@ p{
 }
 
 .nav a.active{
-    background-color: red;
+    background-color: #0070B5;
     color: white;
 }
 
 .footer{
-    position: fixed;
+    position: absolute;
     left: 0;
     bottom: 0;
     width: 100%;
@@ -82,7 +115,7 @@ p{
 
 }
 .footer p{
-    font-size: 10pt;
+    font-size: 5pt;
 }
 /*.footer img{*/
 /*    float: left;*/
