--- a/event.css
+++ b/event.css
@@ -1,12 +1,27 @@
+.head h1{
+    font-family: Lantinghei SC;
+    font-size: 40pt;
+    color: black;
+    font-weight: bold;
+    /*text-decoration: underline;*/
+    text-align: center;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+}
+
 * {box-sizing: border-box;}
 body {font-family: Verdana, sans-serif;}
 .slides {display: none;}
 img {vertical-align: middle;}
 
 .slide-show {
-    max-width: 1000px;
+    max-width: 600px;
+    max-height: 500px;
     position: relative;
     margin: auto;
+    z-index: -1;
 }
 .text {
     color: #f2f2f2;
