--- a/main.css
+++ b/main.css
@@ -1,9 +1,8 @@
-/*body{*/
-/*    background-image: url("IMG_1998.JPG");*/
-/*    background-size: cover;*/
-/*    filter: blur(0px);*/
-/*    background-attachment: fixed;*/
-/*}*/
+body{
+    margin: 0;
+    height: 100vh;
+    position: relative;
+}
 
 h1{
     font-family: Lantinghei SC;
@@ -13,24 +12,23 @@ h1{
 }
 .container{
     display: grid;
-
 }
 
-.bg{
-    width: 100%;
-    height: 100%;
-    position: absolute;
-    left: 0px;
-    top:0px;
-    background: url("IMG_1998.JPG") no-repeat;
-    background-size: cover;
-    -webkit-filter: blur(20px);
-    -moz-filter: blur(20px);
-    -o-filter: blur(20px);
-    -ms-filter: blur(20px);
-    filter: blur(20px);
-    opacity: 0.8;
-}
+/*.bg{*/
+/*    width: 100%;*/
+/*    height: 100%;*/
+/*    position: absolute;*/
+/*    left: 0px;*/
+/*    top:0px;*/
+/*    background: url("images/资源 2.png") no-repeat;*/
+/*    background-size: cover;*/
+/*    -webkit-filter: blur(10px);*/
+/*    -moz-filter: blur(10px);*/
+/*    -o-filter: blur(10px);*/
+/*    -ms-filter: blur(10px);*/
+/*    filter: blur(10px);*/
+/*    opacity: 0.8;*/
+/*}*/
 
 .header{
     background-color: rgba(255, 255, 255, 0.8);
@@ -42,23 +40,25 @@ h1{
     z-index: 1;
 }
 
-/*h2{*/
-/*    font-family:Source Han Sans CN;*/
-/*    font-size: 16pt;*/
-/*    font-weight: bold;*/
-/*    line-height: 19.2;*/
-/*    color: #0070B5;*/
-/*}*/
 
-p{
+
+h2{
     font-family: Source Han Sans CN;
-    font-size: 15pt;
-    font-weight: normal; /* regular */
-    line-height: 12;
+    font-size: 10pt;
+    font-weight: bold;
+    line-height: 19.2;
+    color: #0070B5;
 }
+
+/*p{*/
+/*    font-family: Source Han Sans CN, serif;*/
+/*    font-size: 18pt;*/
+/*    font-weight: normal; !* regular *!*/
+/*    line-height: 12;*/
+/*}*/
 /*<p class="sub-heading">xxxxxx</p>*/
 .sub-heading{
-    font-family: Source Han Sans CN;
+    font-family: Source Han Sans CN, serif;
     font-size: 16pt;
     font-weight: bold;
     border: 1px solid red;
@@ -66,56 +66,43 @@ p{
 
 /*正文*/
 /*<p class = "normal-text">*/
-.normal-text{
-    font-family: Source Han Sans CN;
-    font-size: 9pt;
+.normal-text p{
+    font-family: Source Han Sans CN, serif;
+    font-size: 20px;
     font-weight: bold;
     line-height: 12;
     color: black;
 }
-.nav{
-    background-color: #0070B5;
-    height: 50px;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    padding:0 0px;
-    /*position: fixed;*/
-    top: 0;
-    left: 0;
-    right: 0;
-    z-index: 1;
-}
-.nav a{
-    color: black;
-    text-align: center;
-    padding: 6px 10px;
-    text-decoration: none;
-    font-weight: bold;
-    font-size: 20pt;
-}
-.nav a:hover{
-    background-color: #1D2088;
-    color: white;
-}
 
-.nav a.active{
-    background-color: #0070B5;
-    color: white;
-}
 
-.footer{
+/*video*/
+.video{
     position: absolute;
-    left: 0;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    z-index: -1;
+}
+
+
+
+
+
+
+/*footer*/
+.footer{
+    position: fixed;
+    /*left: 0;*/
     bottom: 0;
     width: 100%;
-    background-color: #1D2088;
+    background-color: #0070B5;
     color: white;
     text-align: center;
+    /*padding: 20px;*/
 
 }
 .footer p{
-    font-size: 5pt;
+    font-size: 10px;
 }
 /*.footer img{*/
 /*    float: left;*/
